2009-05-16 Holger Vogt
 * inpcom.c  lines 2940ff fix case 'q'
 * inp.c:788 error message with original line number from 
   input deck 
 * inp2q.c:155 error message if no model is found and default
   BJT is selected instead 

2009-05-12 Holger Vogt
 * inpcom.c  fcn inp_fix_gnd_name() remove excessive white
   spaces after replacing gnd by 0

2009-05-11 Holger Vogt
 * src/makefile.am replace -lBLT24.dll by -lBLT24 in line 247
 
2009-05-10 Holger Vogt
 * subckt.c:1348 find last dot, not first dot in model_name

2009-05-09 Holger Vogt
 * graf.c: graphics scaling during iplot made a little more 
   convenient

2009-05-06 Holger Vogt
 * pp_lst.c:428 malloc(len+1) +1 added (bug report 2787072) 
   configure.in:803, 958 (bug reports 1834772, 2787076 and 2787079)

2009-05-02 Holger Vogt
 *  new flag NGDEBUG
   main.c, signal_handler.c, visualc/vngspice.vcproj:
   restore SIGSEGV signal handling for error message after seg fault
   (not in debug mode, now only for Windows)
   dctrcurv.c: winmessage about dc
   
2009-05-01 Holger Vogt
 * cktdojob.c, cktsopt.c: moved to cktsopt.c:
   maxord set to min 2 or max 6
  
2009-04-28 Holger Vogt
 * winmain.c, inp.c, cktop.c: SetAnalyse() modified/added
   cktdojob.c: maxord set to minimum 2 (prevent crash in dctran.c:774) 

2009-04-26 Dietmar Warning
 * devices/cktinit.c: prototype load_alldevs not needed
 * ngspice.h: float.h before defines.h, some more function mapping in _MSC_VER section

2009-04-26 Dietmar Warning
 * measure.c, inpcom.c: winmessage only for windows
 * misc/util.c, tilde.c, math/poly/ployfit.c: relay to ngspice.h
 * main.c, tclspice.c, misc/mktemp.c, misc/string.c: don't need include string.h because
   it comes from central place ngspice.h

2009-04-26 Holger Vogt
 * xpressn.c:400 Suppress message "cannot redefine"

2009-04-25 Holger Vogt
 * configure.in, visualc/include/config.h: NGSPICEDATADIR set to $dprefix/share/ngspice

2009-04-23 Holger Vogt
 * measure.c, inpcom.c, : winmessage() header added
